--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <a href="tel:+11%20(000)%20111-11-11">+11(000)111-11-11</a>
     </div>
   </header>
+ 
   <div class="header-container-content">
     <!-- Section Hero -->
     <main>
@@ -50,7 +51,15 @@
           Effective Solutions<br />
           for Your Business
         </h1>
-        <button class="button-order">Order Service</button>
+        <!-- <button class="button-order" data-modal-open>Order Service</button>
+        <div class="modal is-hidden" data-modal>
+          <div class="modal-content">
+            <button class="close-btn" data-modal-close>
+              &times;
+            </button>
+            Continut Modal
+          </div>
+        </div> -->
       </section>
   </div>
   <!-- Section Subtitles -->
@@ -400,6 +409,7 @@
 </div>
   </footer>
 
+  <script src="./js/modal.js"></script>
 
 </body>
 
