--- a/index.html
+++ b/index.html
@@ -51,15 +51,17 @@
           Effective Solutions<br />
           for Your Business
         </h1>
-        <!-- <button class="button-order" data-modal-open>Order Service</button>
+        <button class="button-order" data-modal-open>Order Service</button>
         <div class="modal is-hidden" data-modal>
           <div class="modal-content">
             <button class="close-btn" data-modal-close>
-              &times;
+              <!-- &times; -->
+              <svg class="close-icons" width="24px" height="24px">
+                <use href="./icons/symbol-defs-close.svg#icon-close"></use>
+              </svg>
             </button>
-            Continut Modal
           </div>
-        </div> -->
+        </div>
       </section>
   </div>
   <!-- Section Subtitles -->
