--- a/Portofoliu.html
+++ b/Portofoliu.html
@@ -24,7 +24,7 @@
           <li><a href="index.html">Studio</a></li>
         </ul>
         <ul>
-          <li><a href="Portofoliu.html">Portofolio</a></li>
+          <li><a class="active-portfolio" href="Portofoliu.html">Portofolio</a></li>
         </ul>
         <ul>
           <li><a>Contacts</a></li>
