--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="pages">
       <ul>
         <li>
-          <a href="index.html">Studio</a>
+          <a class="active-studio" href="index.html" >Studio</a>
         </li>
       </ul>
       <ul>
