--- a/Portofoliu.html
+++ b/Portofoliu.html
@@ -24,7 +24,9 @@
           <li><a href="index.html">Studio</a></li>
         </ul>
         <ul>
-          <li><a class="active-portfolio" href="Portofoliu.html">Portofolio</a></li>
+          <li>
+            <a class="active-portfolio" href="Portofoliu.html">Portofolio</a>
+          </li>
         </ul>
         <ul>
           <li><a>Contacts</a></li>
@@ -52,92 +54,173 @@
       <section class="container section">
         <ul class="images-list">
           <li class="portofolio-cards">
-            <img
-              src="./images/bankapp.jpg"
-              alt="bankapp"
-              width="360"
-              height="300"
-            />
+            <div class="img-overlay">
+              <img
+                src="./images/bankapp.jpg"
+                alt="bankapp"
+                width="360"
+                height="300"
+              />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <h3 class="h3-images">Banking App Interface Concept</h3>
             <p class="p-images">App</p>
           </li>
           <li class="portofolio-cards">
-            <img
-              src="./images/contactless.jpg"
-              alt="cashless"
-              width="360"
-              height="300"
-            />
+            <div class="img-overlay">
+              <img
+                src="./images/contactless.jpg"
+                alt="cashless"
+                width="360"
+                height="300"
+              />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <h3 class="h3-images">Cashless Payment</h3>
             <p class="p-images">Marketing</p>
           </li>
           <li class="portofolio-cards">
-            <img
-              src="./images/laptop.jpg"
-              alt="laptop"
-              width="360"
-              height="300"
-            />
+            <div class="img-overlay">
+              <img
+                src="./images/laptop.jpg"
+                alt="laptop"
+                width="360"
+                height="300"
+              />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <h3 class="h3-images">Meditation App</h3>
             <p class="p-images">App</p>
           </li>
           <li class="portofolio-cards">
-            <img
-              src="./images/driving.jpg"
-              alt="driving"
-              width="360"
-              height="300"
-            />
+            <div class="img-overlay">
+              <img
+                src="./images/driving.jpg"
+                alt="driving"
+                width="360"
+                height="300"
+              />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <h3 class="h3-images">Taxi Service</h3>
             <p class="p-images">Marketing</p>
           </li>
           <li class="portofolio-cards">
-            <img
-              src="./images/ecran.jpg"
-              alt="screen"
-              width="360"
-              height="300"
-            />
+            <div class="img-overlay">
+              <img
+                src="./images/ecran.jpg"
+                alt="screen"
+                width="360"
+                height="300"
+              />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <h3 class="h3-images">Screen Illustrations</h3>
             <p class="p-images">Design</p>
           </li>
           <li class="portofolio-cards">
-            <img
-              src="./images/music.jpg"
-              alt="music"
-              width="360"
-              height="300"
-            />
+            <div class="img-overlay">
+              <img
+                src="./images/music.jpg"
+                alt="music"
+                width="360"
+                height="300"
+              />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <h3 class="h3-images">Online Courses</h3>
             <p class="p-images">Marketing</p>
           </li>
           <li class="portofolio-cards">
-            <img
-              src="./images/website.jpg"
-              alt="website"
-              width="360"
-              height="300"
-            />
+            <div class="img-overlay">
+              <img
+                src="./images/website.jpg"
+                alt="website"
+                width="360"
+                height="300"
+              />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <h3 class="h3-images">Instagram Stories Concept</h3>
             <p class="p-images">Design</p>
           </li>
           <li class="portofolio-cards">
-            <img
-              src="./images/shopping.jpg"
-              alt="shopping"
-              width="360"
-              height="300"
-            />
+            <div class="img-overlay">
+              <img
+                src="./images/shopping.jpg"
+                alt="shopping"
+                width="360"
+                height="300"
+              />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <h3 class="h3-images">Organic Food</h3>
             <p class="p-images">Web Site</p>
           </li>
           <li class="portofolio-cards">
-            <img
-              src="./images/coffee.jpg"
-              alt="coffee"
-              width="360"
-              height="300"
-            />
+            <div class="img-overlay">
+              <img
+                src="./images/coffee.jpg"
+                alt="coffee"
+                width="360"
+                height="300"
+              />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <h3 class="h3-images">Fresh Coffee</h3>
             <p class="p-images">Web Site</p>
           </li>
